Companies controller secured, devise integrated

--- a/app/views/user/companies/_form.html.erb
+++ b/app/views/user/companies/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for [:public, @company] do |f| %>
+<%= simple_form_for [:user, @company] do |f| %>
     <%= f.input :id, as: :hidden %>
     <%= f.input :name %>
 
