--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,20 @@
 <!-- Main jumbotron for a primary marketing message or call to action -->
 <%= yield :jumbotron %>
 
-  <div class="container">
+  <div class="container" id="site-content">
+    <% if notice %>
+      <p class="alert alert-success" role="alert"><%= notice %></p>
+    <% end %>
+
+    <% if alert %>
+      <p class="alert alert-danger" role="alert"><%= alert %></p>
+    <% end %>
+
     <%= yield %>
+
     <hr>
     <footer>
-      <p>&copy; Company 2014</p>
+      <p>&copy; Company 2015</p>
     </footer>
   </div> <!-- /container -->
 </body>
